# Sys-Assistant

./: .gitignore  Automate.bat  Changelogs  Changelogs.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dto.rs  error.rs  invoke_error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: account_login.rs  account_swap.rs  account_txt.rs  anti_temp_ban_watchdog.rs  changelog.rs  check_issues.rs  collection_fetch.rs  community_board.rs  credit.rs  discord_auth_flow.rs  feedback.rs  manual_actions.rs  mod.rs  ports.rs  riot_watchdog.rs  run_workflow.rs  sesh_watchdog.rs  test_support.rs  tools_lookup.rs
src-tauri/src/commands/: accounts.rs  applog.rs  auth.rs  changelog.rs  collection.rs  community_configs.rs  credit.rs  feedback.rs  keybind.rs  mod.rs  saved_players.rs  tools.rs  updater.rs  vanguard.rs  workflow.rs
src-tauri/src/domain/: account.rs  action.rs  issues.rs  mod.rs  settings.rs
src-tauri/src/infrastructure/: account_store.rs  app_log.rs  auth_store.rs  changelog.rs  community_configs.rs  discord_auth.rs  downloader.rs  events.rs  feedback.rs  files.rs  henrik.rs  key_simulator.rs  lanyard.rs  launcher.rs  match_info.rs  mod.rs  process.rs  prompt.rs  registry.rs  riot_api.rs  riot_client.rs  riot_login.rs  saved_players_store.rs  services.rs  session_snapshot.rs  settings_store.rs  sync_lock.rs  valorant_api_http.rs  valorant_regional.rs  valorant_version.rs
(+126 files in other folders)
