[package]
name = "automate"
version = "0.5.0"
description = "All in one assistant for the sysinfo.gg Private+TraceX product"
edition = "2021"

[lib]
name = "automate_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "process", "io-util"] }
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
sysinfo = "0.32"
winreg = "0.52"
rand = "0.8"
base64 = "0.22"
keyring-core = "1"
windows-native-keyring-store = "1"
uuid = { version = "1", features = ["v4"] }
uiautomation = { version = "0.20", features = ["process", "input"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
minisign-verify = "0.2"
semver = "1"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true
